test/libsolidity/syntaxTests/inheritance/final_modifier/final_method_interface.sol
interface I {
    function f() external final;
}
// ----
// TypeError: (18-46): Interface function cannot be declared final.
